min width fix, otp variable missing fix, removed all vowels from OTP and removed 0, 1, and 5, because they are confusing, OTP is now 6385729 possibilities which seems fine to me, since they reset every 5 minutes and you can only ateempt every 15 seconds, that means you get 20 guesses at most, so 6385729 / 20 is about a 1 in 319286 chance you'll actually guess the correct code if you're trying to break in, so that seems reasonable

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -48,7 +48,8 @@ div#input {
 
 div#input>input {
     flex-grow: 1;
-    font-size: 20px
+    font-size: 20px;
+    min-width: 10px;
 }
 
 .delete {
